fix divider dark mode

--- a/src/styles/colors/dark.module.scss
+++ b/src/styles/colors/dark.module.scss
@@ -17,7 +17,7 @@ $actionDisabledBackground: rgba(255, 255, 255, 0.12);
 $actionFocus: rgba(255, 255, 255, 0.12);
 
 // Other/Misc
-$divider: rgba(0, 0, 0, 0.12);
+$divider: rgba(255, 255, 255, 0.12);
 
 
 :export {
